# Vioal-Jones-detector

./: Base.h  CMakeLists.txt  Classifiers.h  Image.h  JPG.h  PNG.h  Pictures.h  Search.h  main.cpp
